--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "vite": "^5.4.10"
   },
   "dependencies": {
-    "gsap": "^3.12.5"
+    "@splidejs/splide": "^4.1.4",
+    "gsap": "^3.12.5",
+    "lenis": "^1.1.18",
+    "swiper": "^11.1.15"
   }
 }
